// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cell renders correctly 1`] = `
.emotion-0 {
  height: auto;
  box-sizing: border-box;
  padding: 7px;
  z-index: 2;
  text-align: left;
  padding-right: ;
}

<div
  class="emotion-0"
>
  This is content
</div>
`;

exports[`HeaderCell renders correctly 1`] = `
.emotion-0 {
  height: auto;
  box-sizing: border-box;
  padding: 7px;
  z-index: 2;
  text-align: left;
  padding-right: ;
  text-transform: capitalize;
  font-weight: bold;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 100%;
  position: relative;
  z-index: 2;
}

.emotion-2 {
  overflow: hidden;
  overflow: -moz-hidden-unscrollable;
  text-overflow: ellipsis;
  white-space: nowrap;
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
  width: auto;
  padding-right: 4px;
}

<div
  class="emotion-0"
>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-2"
    >
      This is content
    </div>
  </div>
</div>
`;

exports[`TextCell renders correctly 1`] = `
.emotion-0 {
  height: auto;
  box-sizing: border-box;
  padding: 7px;
  z-index: 2;
  text-align: left;
  padding-right: ;
  overflow: hidden;
  overflow: -moz-hidden-unscrollable;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div
  class="emotion-0"
>
  This is content
</div>
`;
